# vass-reachability

./: .gitignore  Cargo.toml  Makefile  Other Tools.md  README.md  format.sh  idea.md  lint.sh  todo.md
src/: main.rs
src/lib/: lib.rs  logger.rs  utils.rs
src/lib/automaton/: cfg.rs  dfa.rs  dyck.rs  ltc.rs  mod.rs  modulo.rs  nfa.rs  parikh_image.rs  path.rs  petri_net.rs  utils.rs  vass.rs
src/lib/automaton/dfa/: cfg.rs  minimization.rs  mod.rs  node.rs
src/lib/automaton/ltc/: mod.rs  translation.rs
src/lib/automaton/path/: mod.rs  parikh_image.rs  path_like.rs  transition_sequence.rs
src/lib/automaton/petri_net/: initialized.rs  mod.rs  transition.rs
src/lib/automaton/vass/: initialized.rs  mod.rs
src/lib/solver/: mod.rs  vass_reach.rs  vass_z_reach.rs
src/lib/threading/: thread_pool.rs
src/lib/validation/: mod.rs  same_language.rs
test_data/petri_nets/: unknown_petri_net_2.json  unknown_petri_net_42.json  unknown_petri_net_47.json
test_data/petri_nets/3/: unknown_25.json  unknown_31.json  unknown_349.json  unknown_36.json  unknown_4.json  unknown_40.json  unknown_401.json  unknown_43.json  unknown_47.json  unknown_653.json
test_data/petri_nets/4/: unknown_1.json  unknown_14.json  unknown_17.json  unknown_18.json  unknown_30.json  unknown_33.json  unknown_35.json  unknown_4.json  unknown_41.json  unknown_46.json
tests/: dfa.rs  dyck.rs  ltc.rs  modulo.rs  nfa.rs  path.rs  vass.rs  vass_n_reach.rs  vass_reach_random.rs  vass_z_reach.rs  z3.rs
