[package]
name = "vass-reachability"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]
path = "src/lib/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
itertools = "0.13.0"
ndarray = "0.15.6"
petgraph = "0.6.5"
primes = "0.4.0"
z3 = "0.12.1"
rand = "0.8.5"


[profile.release]
lto = true
opt-level = 3
overflow-checks = false